--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@ h1
 {
     color: aqua;
     text-decoration: underline overline #FF3028;
+    text-align: center
 }
 .carre {
-    width: 100%;
-    padding: 100% 0 0 0 !important;
+    width: 50%;
+    padding: 50% 0 0 0 !important;
+    align-items: center;
     background: #e4087e;
   }
