--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ h1
 {
     color: aqua;
     text-decoration: underline overline #FF3028;
-    text-align: center
+    text-align: center;
 }
-.carre {
-    width: 50%;
-    padding: 50% 0 0 0 !important;
+#carre {
     align-items: center;
-    background: #e4087e;
+    width  : 50px;
+    height : 50px;
+    background : green;
   }
