--- a/style.css
+++ b/style.css
@@ -4,9 +4,16 @@ h1
     text-decoration: underline overline #FF3028;
     text-align: center;
 }
-#carre {
-    align-items: center;
-    width  : 50px;
-    height : 50px;
+#carre 
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width  : 500px;
+    height : 500px;
     background : green;
-  }
+}
+#carre.p
+{
+    text-align: center;
+}
