--- a/style.css
+++ b/style.css
@@ -4,16 +4,17 @@ h1
     text-decoration: underline overline #FF3028;
     text-align: center;
 }
-#carre 
+div.carre
 {
-    display: block;
+    float: left;
     margin-left: auto;
     margin-right: auto;
-    width  : 500px;
-    height : 500px;
+    width  : 200px;
+    height : 200px;
     background : green;
 }
-#carre.p
+div.carre.p
 {
+    margin: auto;
     text-align: center;
 }
