--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ div.carre
     width  : 200px;
     height : 200px;
     background : green;
-    border:3px solid black;
     border-radius:8px;
+    margin: 5px;
 }
 p.centre
 {
     margin: auto;
     text-align: center;
+    vertical-align: middle
 }
